[gd_scene load_steps=5 format=3 uid="uid://c4ragps5oh1y1"]

[ext_resource type="Texture2D" uid="uid://bo3pdfl7sjptt" path="res://icon.svg" id="1_fix23"]
[ext_resource type="Script" path="res://Scripts/2D-FirstScene/player.gd" id="1_wy2ee"]

[sub_resource type="CircleShape2D" id="CircleShape2D_lna73"]
radius = 16.0

[sub_resource type="CircleShape2D" id="CircleShape2D_hjkms"]
radius = 16.0

[node name="Player" type="CharacterBody2D" groups=["player"]]
script = ExtResource("1_wy2ee")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.25, 0.25)
texture = ExtResource("1_fix23")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_lna73")

[node name="DamageArea2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea2D"]
shape = SubResource("CircleShape2D_hjkms")

[node name="DamageTimer" type="Timer" parent="."]

[connection signal="body_entered" from="DamageArea2D" to="." method="_on_damage_area_2d_body_entered"]
[connection signal="timeout" from="DamageTimer" to="." method="_on_damage_timer_timeout"]
